@@ -1,0 +1,67 @@
+<jentemplate>
+    <mysettings>
+        <plugin>
+            <title>JEN: Customization</title>
+            <meta>
+                <summary>Open the Settings for the addon on the Customization tab</summary>
+            </meta>
+            <mysettings>0/0</mysettings>
+        </plugin>
+
+        <plugin>
+            <title>JEN: Cache</title>
+            <meta>
+                <summary>Open the Settings for the addon on the General tab</summary>
+            </meta>
+            <mysettings>1/0</mysettings>
+        </plugin>
+
+        <plugin>
+            <title>JEN: Scraper Setup</title>
+            <meta>
+                <summary>Open the Settings for the addon on the General tab</summary>
+            </meta>
+            <mysettings>2/0</mysettings>
+        </plugin>
+
+        <plugin>
+            <title>JEN: Resolver Setup</title>
+            <meta>
+                <summary>Open the Settings for the addon on the Resolvers tab</summary>
+            </meta>
+            <mysettings>3/0</mysettings>
+        </plugin>
+        
+        <plugin>
+            <title>JEN: API Settings</title>
+            <meta>
+                <summary>Open the API Settings if you wish to add your own API Keys to Arrakis</summary>
+            </meta>
+            <mysettings>4/0</mysettings>
+        </plugin>
+
+        <plugin>
+            <title>REAL-DEBRID: Re-Authorize (ResolveURL)</title>
+            <meta>
+                <summary>(Re)Authorize Real-Debrid in the Resolve URL Addon</summary>
+            </meta>
+            <link>plugin://script.module.resolveurl/?mode=auth_rd</link>
+        </plugin>
+
+        <item>
+            <title>PAIRING: Pair My Connection</title>
+            <meta>
+                <summary>Pair with a selection of sites that require pairing for non-premium access</summary>
+            </meta>
+            <pairwith>pairlist</pairwith>
+        </item>
+
+        <item>
+            <title>YOUTUBE: Live and CAMS Fix</title>
+            <meta>
+                <summary>Apply fix for YouTube Live playback issues and if you have problems with CAMS</summary>
+            </meta>
+            <ytdash></ytdash>
+        </item>
+    </mysettings>
+</jentemplate>
