@@ -1,4 +1,5 @@
 v1.8
+    - Added settings_menu.xml to the example xml files included with the template
     - Updates tools.py plugin - Password sessions now exist, default timer is 1 hour. To change, edit the
         SESSION_HOURS variable in settings.xml file.
     - Added script.module.dateutil to imports, for exposing date/time tools to plugin developers.
@@ -20,8 +21,10 @@ v1.8
             login credentials. Just make sure the login_verified in settings.xml includes text unique to the login
             successful page that user's would get if they log in succesfully to your website
     - Updated imdb.py plugin for Upcoming Releases. Refer to the header of that file for usage
+    - Included updated tvmaze and trakt plugins for features added. See plugin's headers for details
     - Added new setting in Cache menu to allow users to disable the Yes/No prompt when clearing cache
         - Plugins that use cache will need to be updated for this as well.
+    - Clearing cache now gives a notification when complete
 
 v1.7
     - root_xml_url in settings.xml now supports file://, http://, and base64 encoded strings
